<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:bind="http://schemas.android.com/apk/res-auto">
    <data>
        <import type="android.view.View" />
        <variable
            name="toolbar"
            type="com.netsite.vllogin.domain.ViewModel.ToolbarModel" />
        <variable
            name="present"
            type="com.netsite.vllogin.login.phonelogin.PhoneLoginPresent" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <include
            layout="@layout/widget_toolbar" bind:toolbar="@{toolbar}"></include>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:text="@string/login_country"
                android:textSize="16sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:background="@null"
                android:text="@string/login_china"
                android:singleLine="true"
                android:textCursorDrawable="@null"
                android:textSize="16sp" />
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/login_ic_into_gray"
                />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/line_gray"></View>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:text="@string/number86"
                android:textSize="16sp" />

            <com.netsite.vllogin.utils.widget.EditTextWithClearButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:background="@null"
                android:hint="@string/login_hint_input_phone"
                android:inputType="phone"
                android:singleLine="true"
                android:textColor="@color/text_hint"
                android:textColorHint="@color/text_hint"
                android:textCursorDrawable="@null"
                android:textSize="16sp" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"></View>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:text="@string/login_password"
                android:textSize="16sp" />

            <com.netsite.vllogin.utils.widget.PasswordEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:background="@null"
                android:hint="@string/login_please_password"
                android:inputType="phone"
                android:singleLine="true"
                android:textColor="@color/text_hint"
                android:textColorHint="@color/text_hint"
                android:textCursorDrawable="@null"
                android:textSize="16sp" />

        </LinearLayout>

    </LinearLayout>
</layout>